CHANGELOG

Current Version 0.4
- **SmartR and the eAE merge into one project named eTRIKS Analytics**
- New Feature: KEGG pathway analysis for heatmap clusters
- New Feature: Categorical concept sorting in heatmap
- New Feature: SmartR is now capable of displaying static images generated by R
- New Feature: Subset selection is now shown in the SmartR tab, similar to Advanced Workflows
- General: Improved error handling
- General: Fixed a bug which caused the previous session to be resycled when not wanted
- General: Fixed a bug which caused the "(Re-)Run Analysis" button to remain disabled under certain conditions
- Heatmap Workflow: Fixed a bug which caused the "Load 100 add. feat." button to fail
- Heatmap Workflow: Fixed a bug that sometimes occured when applying a cutoff
- Heatmap Workflow: Fixed a bug which caused additional LDD to be not displayed correctly
- Heatmap Workflow: Fixed a bug that occured when two LDD nodes had the same name
- Heatmap Workflow: Fixed a bug which causes the wrong options to display when changing number of subsets
- Timeline Workflow: Fixed the correlogram feature after it was broken by 0.3
- Timeline Workflow: Fixed a bug which occured when the first/last timepoint was not in the zoom range
- Correlation Workflow: Improved behavior when selecting too few points for statistics
- Correlation Workflow: Increased scatterplot size
- Boxplot Workflow: Replaced the KDE gauss kernel with the epanechnikov kernel for nicer plots

Version 0.3
- Fix: Big datasets lead no longer to an unpextect error
- Fix: Feature ranking works correctly now
- Fix: Added log2 to Heatmap tooltip
- Fix: Cutoff in Heatmap will not work anymore with 2 rows or less
- Fix: Heatmap can now handle datasets containing duplicated probeset ids
- Improved Heatmap script performance
- Fix: Correlation visualization behaves correctly now when resizing
- Fix: The "Run Analysis" button will now enable again even if JS rendering fails

Version 0.2