@@ -2,6 +2,7 @@ CHANGELOG
 
 Current Version 0.4
 - **SmartR and the eAE merge into one project named eTRIKS Analytics**
+- **New Workflow added: Volcanoplots. Additional features will be added in future updates.**
 - New Feature: KEGG pathway analysis for heatmap clusters
 - New Feature: Categorical concept sorting in heatmap
 - New Feature: SmartR is now capable of displaying static images generated by R
